# roshan-harf-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
deploy/: README.md
deploy/helm/roshan-harf-mcp/: Chart.yaml  values.yaml
deploy/helm/roshan-harf-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
examples/: README.md  inspect_server.py
scripts/: smoke_test.py
src/roshan_harf_mcp/: __init__.py  __main__.py  catalog.py  client.py  config.py  guardrails.py  server.py
src/roshan_harf_mcp/tools/: __init__.py  _base.py  _exec.py  alignment.py  common.py  docs.py  live.py  media.py  speaker.py  transcription.py  tts.py
tests/: conftest.py  test_alignment.py  test_client.py  test_common.py  test_config.py  test_docs.py  test_live.py  test_media.py  test_server.py  test_speaker.py  test_transcription.py  test_tts.py
tests/live/: test_live.py
